--- a/update_courses.ipynb
+++ b/update_courses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created collection units\n"
+      "Created collection planned_in\n"
      ]
     },
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:10<00:00,  2.17s/it]\n"
+      "100%|██████████| 5/5 [00:10<00:00,  2.13s/it]\n"
      ]
     },
     {
@@ -106,7 +106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1930/1930 [02:39<00:00, 12.13it/s]"
+      "100%|██████████| 1930/1930 [02:35<00:00, 12.39it/s]"
      ]
     },
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "course = utils.parse_course(\"https://edu.epfl.ch/studyplan/fr/master/data-science/coursebook/foundations-of-data-science-COM-406\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +157,7 @@
      "output_type": "stream",
      "text": [
       "Getting courses from DB...\n",
-      "- 0 courses found in DB\n",
+      "- 1926 courses found in DB\n",
       "Filtering courses...\n"
      ]
     },
@@ -156,14 +165,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1926/1926 [00:00<00:00, 1283277.13it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 1926/1926 [00:00<00:00, 110735.01it/s]"
      ]
     },
     {
@@ -171,7 +173,14 @@
      "output_type": "stream",
      "text": [
       "Creating courses...\n",
-      "- 1926 courses created\n"
+      "- No new courses to create\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -197,7 +206,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1926/1926 [00:00<00:00, 30553.52it/s]"
+      "100%|██████████| 1926/1926 [00:00<00:00, 28386.20it/s]"
      ]
     },
     {
@@ -244,7 +253,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1926/1926 [00:43<00:00, 44.23it/s]\n"
+      "100%|██████████| 1926/1926 [00:44<00:00, 43.00it/s]\n"
      ]
     }
    ],
@@ -254,9 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E11000 duplicate key error collection: occupancy-epfl-prod.semesters index: semester_unique dup key: { name: \"Semestre de printemps 2023-2024\" }, full error: {'index': 0, 'code': 11000, 'errmsg': 'E11000 duplicate key error collection: occupancy-epfl-prod.semesters index: semester_unique dup key: { name: \"Semestre de printemps 2023-2024\" }', 'keyPattern': {'name': 1}, 'keyValue': {'name': 'Semestre de printemps 2023-2024'}}\n",
+      "E11000 duplicate key error collection: occupancy-epfl-prod.semesters index: semester_unique dup key: { name: \"2023-2024\" }, full error: {'index': 0, 'code': 11000, 'errmsg': 'E11000 duplicate key error collection: occupancy-epfl-prod.semesters index: semester_unique dup key: { name: \"2023-2024\" }', 'keyPattern': {'name': 1}, 'keyValue': {'name': '2023-2024'}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Spring 2023-2024\n",
     "skip_dates = [\n",
@@ -269,6 +287,15 @@
     "    datetime(2024, 5, 9),\n",
     "    datetime(2024, 5, 20),\n",
     "]\n",
+    "\n",
+    "utils.create_new_semester(db,\n",
+    "    name=\"Semestre d'automne 2023-2024\",\n",
+    "    start_date=datetime(2023, 9, 18),\n",
+    "    end_date=datetime(2023, 12, 22),\n",
+    "    skip_dates=[datetime(2023, 9, 18)],\n",
+    "    type=\"fall\",\n",
+    "    available=True\n",
+    ")\n",
     "\n",
     "utils.create_new_semester(db,\n",
     "    name=\"Semestre de printemps 2023-2024\",\n",
@@ -291,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -307,27 +334,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 373/373 [00:00<00:00, 410300.39it/s]"
+      "100%|██████████| 373/373 [00:00<00:00, 181325.38it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating new units...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Creating new units...\n",
       "- 368 units created\n"
      ]
     }
@@ -338,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -346,10 +360,10 @@
      "output_type": "stream",
      "text": [
       "Getting studyplans from DB...\n",
-      "- 7 studyplans found\n",
+      "- 195 studyplans found\n",
       "Filtering studyplans...\n",
       "Creating studyplans...\n",
-      "- 195 studyplans created\n"
+      "- 172 studyplans created\n"
      ]
     }
    ],
@@ -359,15 +373,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Getting studyplans from DB...\n",
+      "- 367 studyplans found\n",
       "Getting planned_in from DB...\n",
-      "- 3370 planned_in found\n",
+      "- 3366 planned_in found\n",
       "Filtering planned_in...\n"
      ]
     },
@@ -375,7 +391,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1926/1926 [00:01<00:00, 1001.70it/s]"
+      "100%|██████████| 1926/1926 [00:03<00:00, 557.11it/s]\n"
      ]
     },
     {
@@ -383,14 +399,7 @@
      "output_type": "stream",
      "text": [
       "Creating planned_in...\n",
-      "- No new planned_in to create\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "- 3051 planned_in created\n"
      ]
     }
    ],
