--- a/update_schedules.ipynb
+++ b/update_schedules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -28,9 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Initializing DB:   0%|          | 0/11 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created collection course_bookings\n",
+      "Created collection course_schedules\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -63,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +86,9 @@
      "output_type": "stream",
      "text": [
       "Getting studyplans from DB...\n",
-      "- 202 studyplans found\n",
+      "- 172 studyplans found\n",
+      "Getting studyplans from DB...\n",
+      "- 23 studyplans found\n",
       "Getting courses from DB...\n",
       "- 1250 courses found\n"
      ]
@@ -80,7 +97,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1250/1250 [02:32<00:00,  8.17it/s]\n"
+      "100%|██████████| 1250/1250 [02:28<00:00,  8.40it/s]\n"
      ]
     }
    ],
@@ -90,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -104,14 +121,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/11 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 11/11 [00:06<00:00,  1.59it/s]\n"
+      "100%|██████████| 11/11 [00:07<00:00,  1.49it/s]\n"
      ]
     },
     {
@@ -128,7 +138,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 170/170 [00:00<00:00, 1986.70it/s]\n"
+      "100%|██████████| 170/170 [00:00<00:00, 1994.53it/s]\n"
      ]
     },
     {
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -175,15 +185,15 @@
      "output_type": "stream",
      "text": [
       "Getting schedules from DB...\n",
-      "- 21961 schedules found\n",
-      "Filtering 21961 schedules...\n"
+      "- 0 schedules found\n",
+      "Filtering 19973 schedules...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21961/21961 [00:00<00:00, 451593.67it/s]"
+      "100%|██████████| 19973/19973 [00:00<00:00, 1263141.90it/s]"
      ]
     },
     {
@@ -192,7 +202,7 @@
      "text": [
       "Deleting schedules not in incoming schedules...\n",
       "- 0 schedules deleted\n",
-      "No new schedules to create\n"
+      "Creating 19973 new schedules...\n"
      ]
     },
     {
@@ -200,6 +210,13 @@
      "output_type": "stream",
      "text": [
       "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 19973 schedules created\n"
      ]
     }
    ],
@@ -209,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +234,7 @@
      "output_type": "stream",
      "text": [
       "Getting DB bookings...\n",
-      "- 24823 bookings found in DB\n",
+      "- 0 bookings found in DB\n",
       "Filtering bookings....\n"
      ]
     },
@@ -225,7 +242,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21961/21961 [01:17<00:00, 282.11it/s]\n"
+      "100%|██████████| 19973/19973 [00:25<00:00, 794.38it/s] \n"
      ]
     },
     {
@@ -239,7 +256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 24823/24823 [00:22<00:00, 1079.82it/s]"
+      "0it [00:00, ?it/s]\n"
      ]
     },
     {
@@ -247,14 +264,8 @@
      "output_type": "stream",
      "text": [
       "- No bookings to remove\n",
-      "No bookings to create\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Creating 22258 new bookings...\n",
+      "- 22258 bookings created\n"
      ]
     }
    ],
