--- a/update_schedules.ipynb
+++ b/update_schedules.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -28,24 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Initializing DB:   0%|          | 0/11 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created collection course_bookings\n",
-      "Created collection course_schedules\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -107,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,14 +97,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [00:07<00:00,  1.49it/s]\n"
+      "100%|██████████| 11/11 [00:46<00:00,  4.19s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 13641 rooms on plan.epfl.ch\n",
+      "Parsing rooms...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15541/15541 [01:34<00:00, 165.10it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 15541 rooms on plan.epfl.ch\n",
       "Getting rooms from database\n",
       "Found 170 rooms in database\n",
       "Updating rooms in database\n"
@@ -138,14 +128,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 170/170 [00:00<00:00, 1994.53it/s]\n"
+      "100%|██████████| 170/170 [00:15<00:00, 10.80it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Room STCC 7 8025 not found on plan.epfl.ch\n",
       "Filtering rooms to create\n"
      ]
     },
@@ -290,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
