added rooms from ewa

--- a/update_meetings.ipynb
+++ b/update_meetings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,94 @@
     "db = client[DB_NAME]\n",
     "\n",
     "db_utils.init(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_rooms_ewa = json.load(open(\"new_rooms_ewa.json\", \"r\"))\n",
+    "\n",
+    "# uppercase all rooms\n",
+    "new_rooms_ewa = [k.upper() for k in new_rooms_ewa]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting rooms from plan.epfl.ch\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 11/11 [00:24<00:00,  2.20s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parsing rooms...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15542/15542 [01:29<00:00, 173.71it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 15542 rooms on plan.epfl.ch\n",
+      "Getting rooms from database\n",
+      "Found 170 rooms in database\n",
+      "Updating rooms in database\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 170/170 [00:22<00:00,  7.51it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtering rooms to create\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9/9 [00:00<00:00, 992.84it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserting 9 new rooms in database\n"
+     ]
+    }
+   ],
+   "source": [
+    "utils.create_rooms(db, rooms_names=new_rooms_ewa)"
    ]
   },
   {
