--- a/update_schedules.ipynb
+++ b/update_schedules.ipynb
@@ -161,7 +161,7 @@
     }
    ],
    "source": [
-    "utils.create_rooms(db, schedules)"
+    "utils.create_rooms(db, schedules=schedules)"
    ]
   },
   {
