--- a/update_meetings.ipynb
+++ b/update_meetings.ipynb
@@ -34,6 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Created collection event_bookings\n",
       "-- DB initialized -- \n"
      ]
     },
@@ -650,6 +651,150 @@
     "with open('ewa_rooms.json', 'w') as f:\n",
     "    json.dump(available_rooms, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [00:16<00:00,  1.89it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "available_rooms = json.load(open(\"ewa_rooms.json\", \"r\"))\n",
+    "\n",
+    "parsed_events = []\n",
+    "for room_name in tqdm(available_rooms, total=len(available_rooms)):\n",
+    "    room_events = utils.parse_next_week(room_name)\n",
+    "    for event in room_events:\n",
+    "        new_event = {\n",
+    "            'room': room_name,\n",
+    "            'start_datetime': datetime.strptime(event['Start'], '%Y-%m-%dT%H:%M:%S'),\n",
+    "            'end_datetime': datetime.strptime(event['End'], '%Y-%m-%dT%H:%M:%S'),\n",
+    "            'name': event['Text'],\n",
+    "            'label': 'event',\n",
+    "            'available': True\n",
+    "        }\n",
+    "        parsed_events.append(new_event)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def populate_events_room(parsed_events):\n",
+    "    db_rooms = list(db.rooms.find({\n",
+    "        'available': True\n",
+    "    }))\n",
+    "\n",
+    "    new_events = []\n",
+    "    for event in tqdm(parsed_events, total=len(parsed_events)):\n",
+    "        room_name = event['room']\n",
+    "        room = list(filter(lambda x: x['name'] == room_name, db_rooms))\n",
+    "        if len(room) == 0:\n",
+    "            print(f\"Room {room_name} not found in db\")\n",
+    "            continue\n",
+    "        room = room[0]\n",
+    "        new_event = event\n",
+    "        new_event['room'] = room['_id']\n",
+    "        new_events.append(new_event)\n",
+    "\n",
+    "    return new_events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [00:00<00:00, 22811.13it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_events = populate_events_room(parsed_events)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_event_bookings(parsed_events):\n",
+    "    db_event_bookings = list(db.event_bookings.find({\n",
+    "        'available': True\n",
+    "    }))\n",
+    "    new_bookings = []\n",
+    "    for event in tqdm(parsed_events, total=len(parsed_events)):\n",
+    "        found = False\n",
+    "        for db_booking in db_event_bookings:\n",
+    "            if event['room'] == db_booking['room_id'] and \\\n",
+    "                event['start_datetime'] == db_booking['start_datetime'] and \\\n",
+    "                event['end_datetime'] == db_booking['end_datetime'] and \\\n",
+    "                event['name'] == db_booking['name']:\n",
+    "                found = True\n",
+    "                break\n",
+    "\n",
+    "        if not found:\n",
+    "            new_booking = {\n",
+    "                'room_id': event['room'],\n",
+    "                'start_datetime': event['start_datetime'],\n",
+    "                'end_datetime': event['end_datetime'],\n",
+    "                'name': event['name'],\n",
+    "                'label': event['label'],\n",
+    "                'available': True\n",
+    "            }\n",
+    "            new_bookings.append(new_booking)\n",
+    "\n",
+    "    if len(new_bookings) == 0:\n",
+    "        print(\"No new bookings to create\")\n",
+    "        return None\n",
+    "    print(f\"Creating {len(new_bookings)} new bookings\")\n",
+    "    db.event_bookings.insert_many(new_bookings)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [00:00<00:00, 183648.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No new bookings to create\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_event_bookings(new_events)"
+   ]
   }
  ],
  "metadata": {
@@ -668,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
