scrap 50days from now

--- a/update_meetings.ipynb
+++ b/update_meetings.ipynb
@@ -2,17 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "from pymongo import MongoClient\n",
     "from config import *\n",
     "import utils\n",
     "from tqdm import tqdm\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timedelta\n",
     "import db_utils\n",
     "from bson.objectid import ObjectId\n",
     "import json"
@@ -34,7 +45,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created collection event_bookings\n",
       "-- DB initialized -- \n"
      ]
     },
@@ -56,725 +66,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_rooms_ewa = json.load(open(\"new_rooms_ewa.json\", \"r\"))\n",
-    "\n",
-    "# uppercase all rooms\n",
-    "new_rooms_ewa = [k.upper() for k in new_rooms_ewa]"
+    "available_rooms = json.load(open(\"ewa_rooms.json\", \"r\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Getting rooms from plan.epfl.ch\n"
+      "  0%|          | 0/31 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [00:24<00:00,  2.20s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parsing rooms...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15542/15542 [01:29<00:00, 173.71it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 15542 rooms on plan.epfl.ch\n",
-      "Getting rooms from database\n",
-      "Found 170 rooms in database\n",
-      "Updating rooms in database\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 170/170 [00:22<00:00,  7.51it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filtering rooms to create\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 992.84it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inserting 9 new rooms in database\n"
+      "100%|██████████| 31/31 [02:07<00:00,  4.10s/it]\n"
      ]
     }
    ],
    "source": [
-    "utils.create_rooms(db, rooms_names=new_rooms_ewa)"
+    "\n",
+    "start_datetime = datetime.now()\n",
+    "end_datetime = start_datetime + timedelta(days=50)\n",
+    "\n",
+    "start_date = start_datetime.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
+    "end_date = end_datetime.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
+    "\n",
+    "new_events = utils.parse_all_rooms_events(available_rooms, start_date, end_date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fetchRoomPage(room_name):\n",
-    "    URL = f\"https://ewa.epfl.ch/room/Default.aspx?room={room_name}\"\n",
-    "    \n",
-    "    try :\n",
-    "        r = requests.get(url = URL, timeout=10)\n",
-    "    except requests.exceptions.ConnectionError:\n",
-    "        print('ConnectionError: ', room_name)\n",
-    "        return None\n",
-    "        \n",
-    "    r = requests.get(url = URL, timeout=10)\n",
-    "\n",
-    "    soup = BeautifulSoup(r.text, 'html.parser')\n",
-    "\n",
-    "    # Find the content placeholder\n",
-    "    content_placeholder = soup.find(id=\"ContentPlaceHolder1_Label1\")\n",
-    "\n",
-    "    if content_placeholder is None:\n",
-    "        return None\n",
-    "    elif \"Pas d'information pour cette salle...\" == content_placeholder.text:\n",
-    "        return False\n",
-    "    else:\n",
-    "        return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rooms = list(db.rooms.find({\n",
-    "    'available': True\n",
-    "}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 1/170 [00:04<13:46,  4.89s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ConnectionError:  MEB331\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  2%|▏         | 3/170 [00:17<17:34,  6.31s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INF1 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  6%|▋         | 11/170 [01:07<10:12,  3.85s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INM203 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 11%|█         | 18/170 [01:21<04:23,  1.73s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room GRC002 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 16%|█▋        | 28/170 [01:34<04:09,  1.76s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INR219 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 18%|█▊        | 30/170 [01:40<05:36,  2.40s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room CO023 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 18%|█▊        | 31/170 [01:42<05:14,  2.26s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room MAA330 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 22%|██▏       | 38/170 [01:50<02:35,  1.18s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INM11 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 23%|██▎       | 39/170 [01:52<03:05,  1.42s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room BC01 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 25%|██▍       | 42/170 [01:55<02:46,  1.30s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room BC02 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 25%|██▌       | 43/170 [01:57<02:52,  1.36s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room MAB1486 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 38%|███▊      | 65/170 [02:19<02:02,  1.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room CO021 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 39%|███▉      | 66/170 [02:20<02:10,  1.25s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INF2 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 42%|████▏     | 71/170 [02:25<01:51,  1.12s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room CO020 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 42%|████▏     | 72/170 [02:26<01:57,  1.19s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room MAB111 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 44%|████▎     | 74/170 [02:29<02:06,  1.32s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room BC03 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 56%|█████▌    | 95/170 [02:49<01:19,  1.05s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room MAA331 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 66%|██████▌   | 112/170 [03:08<01:13,  1.28s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room MAA112 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 114/170 [03:10<01:05,  1.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INM10 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 70%|███████   | 119/170 [03:16<00:59,  1.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INM202 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 75%|███████▍  | 127/170 [03:24<00:50,  1.18s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room MAA110 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 75%|███████▌  | 128/170 [03:25<00:47,  1.14s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room SG0217 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 77%|███████▋  | 131/170 [03:29<00:46,  1.19s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INF213 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 78%|███████▊  | 132/170 [03:30<00:46,  1.23s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room BC04 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 80%|████████  | 136/170 [03:35<00:39,  1.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INF119 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 82%|████████▏ | 139/170 [03:39<00:39,  1.29s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room CM1111 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 85%|████████▍ | 144/170 [03:46<00:41,  1.61s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INM200 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 89%|████████▉ | 151/170 [04:02<00:35,  1.86s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INM201 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 94%|█████████▎| 159/170 [04:35<01:05,  5.99s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INF3 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 96%|█████████▌| 163/170 [05:21<01:21, 11.68s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Room INJ218 is available\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 170/170 [06:04<00:00,  2.15s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ConnectionError:  GRB001\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 93/93 [00:00<00:00, 79492.62it/s]\n"
      ]
     }
    ],
    "source": [
-    "# scan all rooms to see if they exist on ewa\n",
-    "available_rooms = []\n",
-    "for room in tqdm(rooms, total=len(rooms)):\n",
-    "    room_name = room['name']\n",
-    "    if fetchRoomPage(room_name):\n",
-    "        available_rooms.append(room_name)\n",
-    "        print(f\"Room {room_name} is available\")\n",
-    "    "
+    "new_events = utils.populate_events_room(db, new_events)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export the list of available rooms to a json\n",
-    "with open('ewa_rooms.json', 'w') as f:\n",
-    "    json.dump(available_rooms, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 31/31 [00:16<00:00,  1.89it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "available_rooms = json.load(open(\"ewa_rooms.json\", \"r\"))\n",
-    "\n",
-    "parsed_events = []\n",
-    "for room_name in tqdm(available_rooms, total=len(available_rooms)):\n",
-    "    room_events = utils.parse_next_week(room_name)\n",
-    "    for event in room_events:\n",
-    "        new_event = {\n",
-    "            'room': room_name,\n",
-    "            'start_datetime': datetime.strptime(event['Start'], '%Y-%m-%dT%H:%M:%S'),\n",
-    "            'end_datetime': datetime.strptime(event['End'], '%Y-%m-%dT%H:%M:%S'),\n",
-    "            'name': event['Text'],\n",
-    "            'label': 'event',\n",
-    "            'available': True\n",
-    "        }\n",
-    "        parsed_events.append(new_event)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def populate_events_room(parsed_events):\n",
-    "    db_rooms = list(db.rooms.find({\n",
-    "        'available': True\n",
-    "    }))\n",
-    "\n",
-    "    new_events = []\n",
-    "    for event in tqdm(parsed_events, total=len(parsed_events)):\n",
-    "        room_name = event['room']\n",
-    "        room = list(filter(lambda x: x['name'] == room_name, db_rooms))\n",
-    "        if len(room) == 0:\n",
-    "            print(f\"Room {room_name} not found in db\")\n",
-    "            continue\n",
-    "        room = room[0]\n",
-    "        new_event = event\n",
-    "        new_event['room'] = room['_id']\n",
-    "        new_events.append(new_event)\n",
-    "\n",
-    "    return new_events"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 31/31 [00:00<00:00, 22811.13it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "new_events = populate_events_room(parsed_events)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_event_bookings(parsed_events):\n",
-    "    db_event_bookings = list(db.event_bookings.find({\n",
-    "        'available': True\n",
-    "    }))\n",
-    "    new_bookings = []\n",
-    "    for event in tqdm(parsed_events, total=len(parsed_events)):\n",
-    "        found = False\n",
-    "        for db_booking in db_event_bookings:\n",
-    "            if event['room'] == db_booking['room_id'] and \\\n",
-    "                event['start_datetime'] == db_booking['start_datetime'] and \\\n",
-    "                event['end_datetime'] == db_booking['end_datetime'] and \\\n",
-    "                event['name'] == db_booking['name']:\n",
-    "                found = True\n",
-    "                break\n",
-    "\n",
-    "        if not found:\n",
-    "            new_booking = {\n",
-    "                'room_id': event['room'],\n",
-    "                'start_datetime': event['start_datetime'],\n",
-    "                'end_datetime': event['end_datetime'],\n",
-    "                'name': event['name'],\n",
-    "                'label': event['label'],\n",
-    "                'available': True\n",
-    "            }\n",
-    "            new_bookings.append(new_booking)\n",
-    "\n",
-    "    if len(new_bookings) == 0:\n",
-    "        print(\"No new bookings to create\")\n",
-    "        return None\n",
-    "    print(f\"Creating {len(new_bookings)} new bookings\")\n",
-    "    db.event_bookings.insert_many(new_bookings)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 31/31 [00:00<00:00, 183648.90it/s]"
+      "100%|██████████| 93/93 [00:00<00:00, 104464.45it/s]"
      ]
     },
     {
@@ -793,7 +149,7 @@
     }
    ],
    "source": [
-    "create_event_bookings(new_events)"
+    "utils.create_event_bookings(db, new_events)"
    ]
   }
  ],
