--- a/update_meetings.ipynb
+++ b/update_meetings.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -66,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -89,14 +80,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 31/31 [02:07<00:00,  4.10s/it]\n"
+      " 16%|█▌        | 5/31 [00:41<03:30,  8.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No response for INM203\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [04:32<00:00,  8.80s/it]\n"
      ]
     }
    ],
    "source": [
     "\n",
     "start_datetime = datetime.now()\n",
-    "end_datetime = start_datetime + timedelta(days=50)\n",
+    "end_datetime = start_datetime + timedelta(days=100)\n",
     "\n",
     "start_date = start_datetime.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
     "end_date = end_datetime.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
@@ -106,31 +111,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 93/93 [00:00<00:00, 79492.62it/s]\n"
+      "100%|██████████| 310/310 [00:00<00:00, 93287.00it/s]\n"
      ]
     }
    ],
    "source": [
-    "new_events = utils.populate_events_room(db, new_events)"
+    "new_events_with_rooms = utils.populate_events_room(db, new_events)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 93/93 [00:00<00:00, 104464.45it/s]"
+      "100%|██████████| 310/310 [00:00<00:00, 43817.29it/s]"
      ]
     },
     {
@@ -149,7 +154,7 @@
     }
    ],
    "source": [
-    "utils.create_event_bookings(db, new_events)"
+    "utils.create_event_bookings(db, new_events_with_rooms)"
    ]
   }
  ],
